--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -18,6 +18,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&display=swap" rel="stylesheet">
 <style>
+	/*****************************************/
+	/* header 스타일 */
 	div {
 		border: 1px solid red;
 		box-sizing: border-box;
@@ -105,9 +107,58 @@
 	#search_form input[type=submit] {
 		background-color: rgb(255, 145, 77);
 	}
+	
+	/*****************************************/
+	/* nav 스타일 */
+		div {
+		border: 1px solid red;
+		box-sizing: border-box;
+	}
+	
+	#wrap_navigator {
+		width: 1200px;
+		height: 60px;
+		margin: auto;
+	}
+	
+	#wrap_navigator > div {
+		width: 100%;
+	}
+	
+	#navigator {
+		height: 100%;
+	}
+
+	/* 여기부터 navi CSS */
+	#navi {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		height: 100%;
+	}
+	
+	#navi>li {
+		background-color: rgb(255, 222, 89);
+		float: left;
+		height: 100%;
+		width: 200px;
+		text-align: center;
+	}
+	
+	#navi a {
+		text-decoration: none;
+		width: 100%;
+		height: 100%;
+		display: block;
+		line-height: 40px;
+		font-family: 'IBM Plex Sans KR', sans-serif;
+		font-size: 20px;
+		padding: 5px;
+	}
 </style>
 </head>
 
+<!-- header영역 -->
 <header>
 	<div id="wrap_header">
 		<div id="header">
@@ -167,4 +218,23 @@
 		</div>
 	</div>
 </header>
+<!-- nav영역 -->
+<nav>
+	<div id="wrap_navigator">
+		<div id="navigator">
+	 		<ul id="navi">
+		        <li>
+		            <a href="<%= contextPath %>/recipeMain.re">레시피</a>
+		        </li>
+		        <li>
+		            <a href="">셰프</a>
+		        </li>
+		        <li>
+		            <a href="">마켓</a>
+		        </li>
+			</ul>
+		</div>
+	</div>
+</nav>
+
 </html>
