--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -26,7 +26,7 @@
 	/*****************************************/
 	/* header 스타일 */
 	div {
-		border: 1px solid red;
+		border: 1px solid black;
 		box-sizing: border-box;
 	}
 	
