--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -255,16 +255,15 @@
 		$('#managerCheck').click(function(){
 			const managerCheck = prompt('관리자 암호를 입력하세요');
 			if(managerCheck == '리시레시피ReSeeRecipe레십피' ){
+				console.log(managerCheck);
 				return true;
 			}
 			else {
+				window.alert('관리자 암호가 일치하지 않습니다.');
 				return false;
 			}
 		});
-		
-		
 	})
-
 
 
 </script>
