관리자페이지 접근 실패 alert - 왜 안돼

--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -263,7 +263,7 @@
 			}
 			else {
 				//window.alert('관리자 암호가 일치하지 않습니다.');
-				swal('관리자 페이지 접근 실패', "관리자 암호가 일치하지 않습니다", 'warning');
+				swal("관리자 페이지 접근 실패", "관리자 암호가 일치하지 않습니다", "warning");
 				return false;
 			}
 		});
