--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -25,6 +25,7 @@
 	
 	<!-- alert 스타일 -->
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css" />
 <style>
 	/*****************************************/
 	/* header 스타일 */
