로그인하면 회원가입 a태그 블로그 a태그로 바뀌게 했습니다.

--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -207,10 +207,16 @@
 		          <% } %>
 		          </div>
 		          <div id="header_3_1_3">
+		              <% if(loginMember == null) { %>
 		              <a href="#">
 		                  <i class="fa-regular fa-handshake"></i><br> 
 		                  <img src="" alt="">회원가입
 		              </a>
+		              <% } else { %>
+		                  <a href="#">
+		                  <i class="fa-regular fa-handshake"></i><br> 
+		                  <img src="" alt="">블로그
+		              <%} %>
 		          </div>
 		          <div id="header_3_1_4">
 		              <a href="<%= contextPath %>/hllist.no">
