관리자암호 수정함

--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -258,7 +258,7 @@
 	$(function(){
 		$('#managerCheck').click(function(){
 			const managerCheck = prompt('관리자 암호를 입력하세요');
-			if(managerCheck == '리시레시피ReSeeRecipe레십피' ){
+			if(managerCheck == '1234' ){
 				console.log(managerCheck);
 				return true;
 			}
