눈이아파 border를 red->blue로 변경하였읍니다... - MJY

--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -120,7 +120,7 @@
 	/*****************************************/
 	/* nav 스타일 */
 		div {
-		border: 1px solid red;
+		border: 1px solid blue;
 		box-sizing: border-box;
 	}
 	
