Create recipe select - MJY
5:30p

--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -246,7 +246,7 @@
 		<div id="navigator">
 	 		<ul id="navi">
 		        <li>
-		            <a href="<%= contextPath %>/selectRecipeList.re?cpage=1">레시피</a>
+		            <a href="<%= contextPath %>/selectRecipeList.re?currentPage=2">레시피</a>
 		        </li>
 		        <li>
 		            <a href="">셰프</a>
