--- a/ReSeeRecipe/WebContent/views/board/recipe_frag/recipeSortBar.jspf
+++ b/ReSeeRecipe/WebContent/views/board/recipe_frag/recipeSortBar.jspf
@@ -136,7 +136,7 @@
 		
 		<!-- 레시피 정렬 기준 -->
 		<div class="recipe-sort-bar-menu">
-			<input type="hidden" value="selectRecipeListLt">
+			<input type="hidden" value="selectRecipeList">
 			<h3 class="recipe-sort-by">최신순</h3>
 		</div>
 		<div class="recipe-sort-bar-menu">
@@ -148,7 +148,7 @@
 			<h3 class="recipe-sort-by">조회수순</h3>
 		</div>
 		<div class="recipe-sort-bar-menu">
-			<input type="hidden" value="selectRecipeListPo">
+			<input type="hidden" value="selectRecipeListCh">
 			<h3 class="recipe-sort-by">인기셰프순</h3>
 		</div>
 		
