--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -216,7 +216,7 @@
 		              <% } else { %>
 		                  <a href="#">
 		                  <i class="fa-regular fa-handshake"></i><br> 
-		                  <img src="" alt="">블로그
+		                  <img src="" alt="">블로그 <br>
 		                  <!-- 회원정보변경 임시 -->
 		                  <a href="<%= contextPath %>/yrmemberUpdateConfirmForm.me">
 		                  <i class="fa-regular fa-handshake"></i><br> 
