--- a/ReSeeRecipe/WebContent/views/board/recipe_frag/recipeSortBar.jspf
+++ b/ReSeeRecipe/WebContent/views/board/recipe_frag/recipeSortBar.jspf
@@ -74,7 +74,7 @@
 	}
 	
 	/* 글쓰기 버튼 세팅 */
-	.recipe-sort-bar-menu > form > input + button {
+	.recipe-sort-bar-menu > form > button {
 		width: 100%;
 		height: 100%;
 		border: 0px;
@@ -156,7 +156,6 @@
 		<% if(loginMemberSortBar != null) { %>
 			<div class="recipe-sort-bar-menu">
 				<form action="<%= contextPathSortBar %>/recipeEnrollForm.re" method="post">
-					<input type="hidden" name="memNo" value="<%= loginMemberSortBar.getMemNo() %>">
 					<button type="submit">
 						<h3 class="recipe-sort-by">글작성</h3>
 					</button>
