--- a/ReSeeRecipe/WebContent/resources/css/manager.css
+++ b/ReSeeRecipe/WebContent/resources/css/manager.css
@@ -8,6 +8,8 @@
 }
 
 .rs-title {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
     height: 60px;
     line-height: 60px;  /* 중앙정렬 */
