--- a/ReSeeRecipe/.settings/org.eclipse.wst.common.component
+++ b/ReSeeRecipe/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="ReSeeRecipe">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/"/>
         <property name="context-root" value="ReSeeRecipe"/>
         <property name="java-output-path" value="/ReSeeRecipe/WebContent/WEB-INF/classes"/>
     </wb-module>
