--- a/ReSeeRecipe/WebContent/views/board/recipe_frag/recipeCategoryBar.jspf
+++ b/ReSeeRecipe/WebContent/views/board/recipe_frag/recipeCategoryBar.jspf
@@ -8,7 +8,12 @@
 <head>
 <meta charset="UTF-8">
 <title>레시피카테고리바</title>
+<!-- jQuery / 부트스트랩 -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 <style>
     /*****************************************************/
