메인화면 꾸미기
1) 로고사진 추가 + 로고 클릭 시 메인화면으로 이동
2) 더보기 버튼 레시피와 마켓 사이트로 이동하도록 href 속성에 매핑값 적기
3) 배너 움직이게 수정하기-- 해야해유

--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -180,8 +180,8 @@
 		       <% } %>
 		    </div>
 		    <div id="header_2">
-		        <a href="#">
-		            <img src="resources/img/Re see recipe 로고.png" alt="Reseerecipe메인">
+		        <a href="<%= contextPath %>">
+		            <img src="resources/css/common/Re see recipe 로고.png" alt="Reseerecipe메인">
 		        </a>
 		    </div>
 		    <div id="header_3">
