add manager / navbar_manager
관리자 메인화면 틀 js & css file 생성

--- a/ReSeeRecipe/WebContent/resources/css/manager.css
+++ b/ReSeeRecipe/WebContent/resources/css/manager.css
@@ -74,3 +74,16 @@ li > a {
 ul li{
     list-style: none;
 }
+.category{
+	display: none;
+}
+#recipeHome{
+	margin-left: -33px;
+}
+#recipeHome span{
+	padding-left: 5px
+}
+.titleMenu a{
+	color: black;
+	text-decoration: none;
+}
