--- a/ReSeeRecipe/WebContent/resources/css/coupon/coupon_manager.css
+++ b/ReSeeRecipe/WebContent/resources/css/coupon/coupon_manager.css
@@ -23,7 +23,7 @@
 	width: 170px;
 }
 .modal-table tr {
-	height: 40px;
+	height: 60px;
 }
 .modal textarea {
 	width:100%;
@@ -34,7 +34,7 @@
 }
 .modal input {
     width: 100%;
-    height: 40px;
+    height: 55px;
     cursor: pointer;
     border: none;
     text-align: center;
@@ -51,4 +51,14 @@
 }
 .desc::before {
 	content: "\25BC";
+}
+.btn-check-r{
+	border-right: none;
+	width: 105px;
+}
+.btn-check-l{
+	border-left: none;
+}
+.form-date{
+	margin-left: -10px;
 }
