--- a/ReSeeRecipe/WebContent/resources/css/dm/dm_manager.css
+++ b/ReSeeRecipe/WebContent/resources/css/dm/dm_manager.css
@@ -46,6 +46,12 @@
 	text-align: center;
 	border: none;
 }
+table td:nth-child(6){
+	overflow:hidden;
+	white-space:nowrap;
+	text-overflow:ellipsis;
+	max-width:130px;
+}
 .paging-area{
 	padding-top: 65px;
 	text-align: center;
