--- a/ReSeeRecipe/WebContent/resources/css/myPage/memberCouponList.css
+++ b/ReSeeRecipe/WebContent/resources/css/myPage/memberCouponList.css
@@ -18,7 +18,6 @@
 
 .container > div > div{
     float : left;
-    
     height : 100%;
 }
 
@@ -35,7 +34,7 @@
 
 
 #grade1 {
-    width : 20%;
+    width : 150px;
     text-align : center;
     background-color : lightgray;
     border-radius : 100px;
