--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -31,7 +31,7 @@
 	/* header 스타일 */
 	div {
 		box-sizing: border-box;
-		border: 1px solid black;
+		
 	}
 	
 	#wrap_header {
@@ -120,7 +120,7 @@
 	/*****************************************/
 	/* nav 스타일 */
 		div {
-		border: 1px solid blue;
+		
 		box-sizing: border-box;
 	}
 	
@@ -273,7 +273,7 @@
 			}
 			else {
 				//window.alert('관리자 암호가 일치하지 않습니다.');
-				swal("관리자 페이지 접근 실패", "관리자 암호가 일치하지 않습니다", "warning");
+				Swal.fire("관리자 페이지 접근 실패", "관리자 암호가 일치하지 않습니다", "warning");
 				return false;
 			}
 		});
