관리자암호 console 주석처리

--- a/ReSeeRecipe/WebContent/views/common/header.jspf
+++ b/ReSeeRecipe/WebContent/views/common/header.jspf
@@ -268,7 +268,7 @@
 		$('#managerCheck').click(function(){
 			const managerCheck = prompt('관리자 암호를 입력하세요');
 			if(managerCheck == '1234' ){
-				console.log(managerCheck);
+				//console.log(managerCheck);
 				return true;
 			}
 			else {
