--- a/ReSeeRecipe/WebContent/resources/css/myPage/memberCouponList.css
+++ b/ReSeeRecipe/WebContent/resources/css/myPage/memberCouponList.css
@@ -34,10 +34,19 @@
 
 
 #grade1 {
-    width : 150px;
-    text-align : center;
-    background-color : lightgray;
-    border-radius : 100px;
+  width: 150px;
+  height: 150px;
+  text-align: center;
+  background-color: lightgray;
+  border-radius: 50%; /* 100% 대신 50%로 변경 */
+  overflow: hidden;
+}
+
+.grade1-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 #grade2 {
